fixing bug where line can be too long in language other than English like Japanese

--- a/app/assets/stylesheets/heatmap.css
+++ b/app/assets/stylesheets/heatmap.css
@@ -57,6 +57,7 @@ button.close-heatmap:hover {
 	padding-left: 20px;
 	font-size: 25px;
 	line-height: 46px;
+	white-space: nowrap;
 }
 .trends-list a {
 	-webkit-transition: all 0.4s;
